--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -4,8 +4,8 @@
 }
 
 #wall #tag-2{
-  display: none
+  display: none;
 }
-div#wall #tag-3.slick{
-  display: none
+#wall #tag-3.slick{
+  display: none;
 }
